<resources>
    <string name="app_name">MyCalculator</string>
    <string name="sqr_root">√¯¯</string>
    <string name="off">OFF</string>
    <string name="c">C</string>
    <string name="mrc">MRC</string>
    <string name="mMinus">M-</string>
    <string name="mPlus">M+</string>
    <string name="division">/</string>
    <string name="multiplication">X</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equally">=</string>
    <string name="point">.</string>
    <string name="d0">0</string>
    <string name="d3">3</string>
    <string name="d2">2</string>
    <string name="d1">1</string>
    <string name="d4">4</string>
    <string name="d9">9</string>
    <string name="d8">8</string>
    <string name="d7">7</string>
    <string name="percent">%</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="change_theme">Change theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="sport">Sport</string>
</resources>